results/classifier/zero-shot/105/device/1543057
device: 0.903
mistranslation: 0.871
other: 0.863
semantic: 0.862
graphic: 0.860
instruction: 0.850
network: 0.737
socket: 0.640
KVM: 0.497
boot: 0.490
vnc: 0.458
assembly: 0.452

Warnings are treated as errors

System: Ubuntu 14.04, 32bit
Kernel: 3.13.0-55-generic
Qemu: v. 2.2.50

Error msg:

hw/acpi/pcihp.c: In function ‘acpi_pcihp_pc_no_hotplug’:
hw/acpi/pcihp.c:117:34: error: ‘PCIDevice’ has no member named ‘qdev’
     return (pc->is_bridge && !dev->qdev.hotplugged) || !dc->hotpluggable;
                                  ^
hw/acpi/pcihp.c:118:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors

I have same error "PCIDevice has no member named 'qdev'" with you.
Did you find any solutions to this error?

(a) That warnings are treated as errors  is a feature, not a bug (it happens for development builds only)
(b) the definition of struct PCIDevice in include/hw/pci/pci.h starts with "DeviceState qdev;" so it's not clear to me how that error could be produced in the first place

I see the original submitter was using 2.2.50 -- I suggest using either (a) a release build of QEMU or (b) current master. 2.2.50 will be from somewhere on trunk between 2.2 and 2.3, so might quite possibly have had a build bug that was quickly fixed subsequently.


Closing this as invalid - unless you can reproduce this with the latest release version or the current master branch again, then please feel free to open this ticket again.

